compare the list using the streams and ignore the case